--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -1,10 +1,10 @@
 extends _layout.pug
 
 block locals
-  - var title = 'Hello Website';
+  - var title = 'Hello Pug';
 
 block content
-  h1 Hello world!
+  h1 Hello Pug!!!
   img(src="../images/icon.png")
   img(src="../images/thumbnail.jpg")
 
